--- a/data-architect.html
+++ b/data-architect.html
@@ -157,7 +157,7 @@
 work closely with your customer to understand their questions and needs, and 
 dig?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/solstice/jobs/4277354002?gh_jid=4277354002&gh_src=b5349ccb2'>Job Application for Data Architect at Solstice | Kin + Carta</a></h5> 
+<h5><a href='https://boards.greenhouse.io/solstice/jobs/4277354002?gh_jid=4277354002&gh_src=b5349ccb2'>Job Application for Data Architect at Solstice | Kin + Carta</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -336,7 +336,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.vertex-solutions.com/job/data-and-cloud/enterprise-data-architect/j14668/'>Enterprise Data Architect Job | Vertex Solutions</a></h5> 
+<h5><a href='https://www.vertex-solutions.com/job/data-and-cloud/enterprise-data-architect/j14668/'>Enterprise Data Architect Job | Vertex Solutions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
@@ -364,7 +364,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://www.greatinsurancejobs.com/job/6403992/lead-data-architect/?TrackID=97736'>Lead Data Architect job with Travelers Insurance | 6403992</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6403992/lead-data-architect/?TrackID=97736'>Lead Data Architect job with Travelers Insurance | 6403992</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
@@ -392,7 +392,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfiniteComputingSystems/743999697477822-database-architect-looking-for-locals-to-lansing-mi'>Infinite Computing Systems Database Architect - looking for locals to Lansing, MI | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/InfiniteComputingSystems/743999697477822-database-architect-looking-for-locals-to-lansing-mi'>Infinite Computing Systems Database Architect - looking for locals to Lansing, MI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -462,7 +462,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=141ca3bc1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=141ca3bc1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
